# Genesis

./: AI_LIP_READING_GUIDE.md  LICENSE  MODELS.md  QUICK_START.md  README.md  check_lip_reading.py  download_models.sh  genesis.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh
app/: __init__.py  api_server.py  dashboard.py  dashboard_lip_reading.py  emotion_recognition.py  face_register.py  lip_reading.py  lip_reading.py.bak  lip_reading.py.bak2  lip_reading_ai.py  lip_reading_server.py  multi_person_tracker.py  owl_vit_detector.py  report_generator.py  run_camera.py  run_camera_ai.py  run_camera_complete.py  run_camera_detailed.py  run_camera_full.py  run_camera_hands_detailed.py  run_camera_headhands.py  run_camera_precise.py  run_camera_pro.py  run_camera_ultimate_body.py  run_video.py  zone_editor.py
configs/: settings.yaml  zones.json
core/: __init__.py  advanced_analytics.py  analytics.py  emotion_detection.py  face_recognition.py  identity_tracker.py  io_utils.py  llm_integration.py  zones.py
infrastructure/: README.md  __init__.py  docker-compose.dev.yml  requirements.txt
infrastructure/cache/: __init__.py  frame_cache.py
infrastructure/database/: __init__.py  postgres_client.py  vector_search.py
infrastructure/events/: __init__.py  consumer.py  event_types.py  producer.py  retry_policy.py
infrastructure/kong/: docker-compose.kong.yml  kong.yml
infrastructure/mlops/: docker-compose.mlops.yml
infrastructure/observability/: docker-compose.observability.yml
infrastructure/postgres/: init.sql  install_pgvector.sh
infrastructure/redis/: init-streams.sh  redis.conf
infrastructure/scripts/: migrate_sqlite_to_postgres.py  setup_phase1.sh  setup_phase3.sh  setup_phase4.sh  (+4 more)
mlops/: __init__.py
services/: Dockerfile.analytics  Dockerfile.detection  Dockerfile.face  Dockerfile.storage  README.md  __init__.py  docker-compose.yml
tests/: conftest.py
(+53 files in other folders)
